--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 
         <!-- Amazon -->
         <a class="button button-amazon" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/amazon.svg" alt="Amazon Wishlist Logo">Amazon Wishlist</a><br>
+        
+        <!-- osu! -->
+        <a class="button button-osu" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/osu.svg" alt="osu! logo">osu! profile</a><br>
 
         <!-- Amazon Music -->
         <a class="button button-amazon-music" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/amazon-music.svg" alt="Amazon Music Logo">Listen on Amazon Music</a><br>       
