Favicon & spotify title change

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
-  <meta name="description" content="https://littlelink.io">
-  <meta name="author" content="Seth Cottle">
+  <title>ch4og.com</title>
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -118,7 +116,7 @@
         <a class="button button-discord" href="https://discord.com/users/408227192137318400" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a><br>
 
         <!-- Spotify -->
-        <a class="button button-spotify" href="https://open.spotify.com/user/u8e2yand3dvl4hdmyl7weyxkl?si=68aa857f882a4d4f" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a><br>
+        <a class="button button-spotify" href="https://open.spotify.com/user/u8e2yand3dvl4hdmyl7weyxkl?si=68aa857f882a4d4f" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify</a><br>
 
         <!-- Steam Alt -->
         <a class="button button-steam-alt" href="https://steamcommunity.com/id/ch4og/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/steam.svg" alt="Steam Logo">Steam</a><br>
