--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
         <a class="button button-discord" href="https://discord.com/users/408227192137318400" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a><br>
 
         <!-- Spotify -->
-        <a class="button button-spotify" href="https://open.spotify.com/user/u8e2yand3dvl4hdmyl7weyxkl?si=68aa857f882a4d4f" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify</a><br>
+        <a class="button button-spotify" href="https://open.spotify.com/playlist/0VKBeN3iec9mGXHbYfUpwp" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify Playlist</a><br>
+
+        <!-- YaMusic -->
+        <a class="button button-yt" href="https://music.yandex.ru/users/mitanick" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/yandex-music.png" alt="YaMusic Logo">Yandex Music</a><br>
 
         <!-- Steam Alt -->
         <a class="button button-steam-alt" href="https://steamcommunity.com/id/ch4og/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/steam.svg" alt="Steam Logo">Steam</a><br>
