--- a/index.html
+++ b/index.html
@@ -115,11 +115,8 @@
         <!-- Discord -->
         <a class="button button-discord" href="https://discord.com/users/408227192137318400" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a><br>
 
-        <!-- Spotify -->
-        <a class="button button-spotify" href="https://open.spotify.com/playlist/0VKBeN3iec9mGXHbYfUpwp" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify Playlist</a><br>
-
-        <!-- YaMusic -->
-        <a class="button button-yt" href="https://music.yandex.ru/users/mitanick" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/yandex-music.png" alt="YaMusic Logo">Yandex Music</a><br>
+        <!-- AList -->
+        <a class="button button-yt" href="https://c.ch4og.com/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/alist.svg" alt="YaMusic Logo">File Safe</a><br>
 
         <!-- Steam Alt -->
         <a class="button button-steam-alt" href="https://steamcommunity.com/id/ch4og/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/steam.svg" alt="Steam Logo">Steam</a><br>
