--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <a class="button button-github" href="https://github.com/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a><br>
 
         <!-- Notion -->
-        <a class="button button-generic" href="https://ctf.ch4og.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-code.svg" alt="Code Logo">CTF writeups</a><br>
+        <a class="button button-generic" href="https://ctf.ch4og.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-code.svg" alt="Code Logo">cybersec writeups</a><br>
         
         <!-- AList -->
         <a class="button button-yt" href="https://c.ch4og.com/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/alist.svg" alt="YaMusic Logo">File Safe</a><br>
