--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h1 role="heading">ch4og</h1>
 
         <!-- Short Bio -->
-        <p>Cybersec student and gacha gamer</p>
+        <p>Hi! I am ch4og, cybersec student, linux enthusiast and gacha gamer</p>
 
         <!--
 
@@ -109,11 +109,11 @@
         <!-- GitHub -->
         <a class="button button-github" href="https://github.com/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a><br>
 
-        <!-- Notion -->
-        <a class="button button-default" href="https://ctf.ch4og.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-code.svg" alt="Code Logo">cybersec writeups</a><br>
+        <!-- Writeups -->
+        <a class="button button-default" href="https://ctf.ch4og.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-code.svg" alt="Code Logo">Cybersec writeups</a><br>
         
         <!-- AList -->
-        <a class="button button-yt" href="https://c.ch4og.com/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/alist.svg" alt="YaMusic Logo">File Safe</a><br>
+        <a class="button button-yt" href="https://c.ch4og.com/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/alist.svg" alt="YaMusic Logo">Cunnysafe</a><br>
 
         <!-- Discord -->
         <a class="button button-discord" href="https://discord.com/users/408227192137318400" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a><br>
