Edit some things

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/ch4og.jpg" class="avatar" alt="">
+        <img src="images/ava.jpg" class="avatar" alt="">
 
         <!-- Title -->
         <h1 role="heading">ch4og</h1>
 
         <!-- Short Bio -->
-        <p>Hi! I am ch4og, cybersec student, linux enthusiast and gacha gamer</p>
+        <p>Hi! I am ch4og, cybersec student and linux enthusiast</p>
 
         <!--
 
@@ -109,6 +109,9 @@
         <!-- GitHub -->
         <a class="button button-github" href="https://github.com/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg">GitHub</a><br>
 
+        <!-- GitLab -->
+        <a class="button button-gitlab" href="https://gitlab.com/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg">GitLab</a><br>
+
         <!-- Writeups -->
         <a class="button button-notion" href="https://ctf.ch4og.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/notion.svg">Cybersec stuff</a><br>
         
@@ -117,9 +120,6 @@
 
         <!-- Telegram -->
         <a class="button button-telegram" href="https://t.me/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/telegram.svg">Telegram</a><br>
-        
-        <!-- Steam Alt -->
-        <a class="button button-steam-alt" href="https://steamcommunity.com/id/ch4og/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/steam.svg">Steam</a><br>
 
         <br>
         <!-- 
