--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         <!-- GitHub -->
         <a class="button button-github" href="https://github.com/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg">GitHub</a><br>
 
-        <!-- GitLab -->
-        <a class="button button-gitlab" href="https://gitlab.com/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg">GitLab</a><br>
+        <!-- Codeberg -->
+        <a class="button button-bluesky-alt" href="https://codeberg.org/ch4og" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/codeberg.svg">Codeberg</a><br>
 
         <!-- Writeups -->
         <a class="button button-notion" href="https://ctf.ch4og.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/notion.svg">Cybersec stuff</a><br>
